fix sidebar search box button alignment

--- a/style/style.less
+++ b/style/style.less
@@ -133,10 +133,6 @@ a {
     padding: @padding-base-vertical*4 @padding-base-horizontal*2;
 }
 
-.sidebar .form-control {
-  margin-top: @padding-base-vertical;
-}
-
 /* enable absolute positioning */
 .inner-addon {
   position: relative;
